5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1735_2521.log
== TEST (2019-05-20 19:06:27) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 0
somaT = 1/3
cont1 = 2
cont2 = 2
while (cont1 < n):
	somaT = 1 + somaT + (somaT*cont1/cont2+3)
	cont1 +=1
	cont2 +=2
	print(somaT)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (cont1 < n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:06:40) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 0
somaT = 1/3
cont1 = 2
cont2 = 2
while (cont1 < N):
	somaT = 1 + somaT + (somaT*cont1/cont2+3)
	cont1 +=1
	cont2 +=2
	print(somaT)
-- OUTPUT:
4.666666666666667
12.166666666666668
24.27777777777778
43.451388888888886
73.52222222222221
120.41018518518516
193.21600529100525
305.9000082671957
479.8444573045266
747.7589088220162
1159.627404543116
1791.7589153373037
2760.552177442006
4243.419415357366
6510.576436881294
9973.320168974482
15257.313199608032
23313.784054956715
35588.196715460246
54275.999991076875
82710.28570068858
125949.20777150305
191665.83791315684
291495.7951595927
443077.6086425809
673141.1362069979
1022181.2809069228
1551529.1585194364
2354048.240512248
3570310.498110243
5413055.400360691
8204166.091171673
12430558.683593445
18828644.358972423
28511951.17215824
43163930.080072895
65329195.47254276
98853391.88608444
149547443.0071534
226190511.54831952
342044192.1950197
517138246.96151793
781720609.872062
1181464107.5566392
1785323544.3078103
2697391011.160713
4074782169.795971
6154618906.295998
9294730597.181711
14035043205.744385
21190163275.41799
31988996487.08293
48285277720.35159
72875002489.34546
10997500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:06:48) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 0
somaT = 1/3
cont1 = 2
cont2 = 2
while (cont1 < N):
	somaT = 1 + somaT + (somaT*cont1/cont2+3)
	cont1 +=1
	cont2 +=2
	print(somaT)
-- OUTPUT:
4.666666666666667
12.166666666666668
24.27777777777778
43.451388888888886
73.52222222222221
120.41018518518516
193.21600529100525
305.9000082671957
479.8444573045266
747.7589088220162
1159.627404543116
1791.7589153373037
2760.552177442006
4243.419415357366
6510.576436881294
9973.320168974482
15257.313199608032
23313.784054956715
35588.196715460246
54275.999991076875
82710.28570068858
125949.20777150305
191665.83791315684
291495.7951595927
443077.6086425809
673141.1362069979
1022181.2809069228
1551529.1585194364
2354048.240512248
3570310.498110243
5413055.400360691
8204166.091171673
12430558.683593445
18828644.358972423
28511951.17215824
43163930.080072895
65329195.47254276
98853391.88608444
149547443.0071534
226190511.54831952
342044192.1950197
517138246.96151793
781720609.872062
1181464107.5566392
1785323544.3078103
2697391011.160713
4074782169.795971
6154618906.295998
9294730597.181711
14035043205.744385
21190163275.41799
31988996487.08293
48285277720.35159
72875002489.34546
10997500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:07:00) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 0
somaT = 1/3
cont1 = 2
cont2 = 2
while (cont1 < N):
	somaT = 1 + somaT + (somaT*cont1/cont2+3)
	cont1 +=1
	cont2 +=2
	print(somaT)
-- OUTPUT:
4.666666666666667
12.166666666666668
24.27777777777778
43.451388888888886
73.52222222222221
120.41018518518516
193.21600529100525
305.9000082671957
479.8444573045266
747.7589088220162
1159.627404543116
1791.7589153373037
2760.552177442006
4243.419415357366
6510.576436881294
9973.320168974482
15257.313199608032
23313.784054956715
35588.196715460246
54275.999991076875
82710.28570068858
125949.20777150305
191665.83791315684
291495.7951595927
443077.6086425809
673141.1362069979
1022181.2809069228
1551529.1585194364
2354048.240512248
3570310.498110243
5413055.400360691
8204166.091171673
12430558.683593445
18828644.358972423
28511951.17215824
43163930.080072895
65329195.47254276
98853391.88608444
149547443.0071534
226190511.54831952
342044192.1950197
517138246.96151793
781720609.872062
1181464107.5566392
1785323544.3078103
2697391011.160713
4074782169.795971
6154618906.295998
9294730597.181711
14035043205.744385
21190163275.41799
31988996487.08293
48285277720.35159
72875002489.34546
10997500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:15:37) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont < n):
	valor = 1 + cont/cont*2+1
	cont += 1
	print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(cont < n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:15:58) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont < N):
	valor = 1 + cont/cont*2+1
	cont += 1
	print(valor)
-- OUTPUT:
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:16:45) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont < N):
	valor = 1 + cont/cont*2+1
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:17:06) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont < N):
	valor = 1 + (cont/(cont*2+1)
	soma = soma + valor
	cont += 1
	print(valor)
-- ERROR:
File "XXXX", line 9
    soma = soma + valor
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:17:29) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont < N):
	valor = 1 + (cont/(cont*2+1))
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
1.3333333333333333
1.4
1.4285714285714286
1.4444444444444444
1.4545454545454546
1.4615384615384617
1.4666666666666668
1.4705882352941178
1.4736842105263157
1.4761904761904763
1.4782608695652173
1.48
1.4814814814814814
1.4827586206896552
1.4838709677419355
1.4848484848484849
1.4857142857142858
1.4864864864864864
1.4871794871794872
1.4878048780487805
1.4883720930232558
1.488888888888889
1.4893617021276595
1.489795918367347
1.4901960784313726
1.490566037735849
1.490909090909091
1.4912280701754386
1.4915254237288136
1.4918032786885247
1.492063492063492
1.4923076923076923
1.4925373134328357
1.4927536231884058
1.4929577464788732
1.4931506849315068
1.4933333333333334
1.4935064935064934
1.4936708860759493
1.4938271604938271
1.4939759036144578
1.4941176470588236
1.4942528735632183
1.49438202247191
1.4945054945054945
1.4946236559139785
1.4947368421052631
1.4948453608247423
1.494949494949495
1.495049504950495
1.4951456310679612
1.4952380952380953
1.4953271028037383
1.4954128440366974
1.4954954954
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:18:21) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont < N):
	valor = 1 + valor + (cont/(cont*2+1))
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
1.6666666666666665
3.0666666666666664
4.495238095238095
5.93968253968254
7.394227994227994
8.855766455766455
10.322433122433122
11.79302135772724
13.266705568253554
14.74289604444403
16.22115691400925
17.70115691400925
19.18263839549073
20.665397016180385
22.14926798392232
23.634116468770806
25.11983075448509
26.606317240971578
28.093496728151063
29.581301606199844
31.0696736992231
32.55856258811199
34.04792429023965
35.537720208607
37.02791628703837
38.51848232477422
40.00939141568331
41.50061948585875
42.992144909587566
44.48394818827609
45.97601168033958
47.46831937264727
48.960856686080106
50.45361030926851
51.946568055747385
53.43971874067889
54.933052074012224
56.42655856751872
57.920229453594665
59.414056614088494
60.90803251770295
62.40215016476177
63.89640303832499
65.3907850607969
66.88529055530239
68.37991421121637
69.87465105332164
71.36949641414638
72.86444590909588
74.35949541404638
75.85464104511433
77.34987914035243
78.84520624315617
80.34061908719286
81.83611458268835
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:18:47) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont < N):
	valor = 1 + valor + (cont/(cont*2+1))
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
1.6666666666666665
3.0666666666666664
4.495238095238095
5.93968253968254
7.394227994227994
8.855766455766455
10.322433122433122
11.79302135772724
13.266705568253554
14.74289604444403
16.22115691400925
17.70115691400925
19.18263839549073
20.665397016180385
22.14926798392232
23.634116468770806
25.11983075448509
26.606317240971578
28.093496728151063
29.581301606199844
31.0696736992231
32.55856258811199
34.04792429023965
35.537720208607
37.02791628703837
38.51848232477422
40.00939141568331
41.50061948585875
42.992144909587566
44.48394818827609
45.97601168033958
47.46831937264727
48.960856686080106
50.45361030926851
51.946568055747385
53.43971874067889
54.933052074012224
56.42655856751872
57.920229453594665
59.414056614088494
60.90803251770295
62.40215016476177
63.89640303832499
65.3907850607969
66.88529055530239
68.37991421121637
69.87465105332164
71.36949641414638
72.86444590909588
74.35949541404638
75.85464104511433
77.34987914035243
78.84520624315617
80.34061908719286
81.83611458268835
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:19:03) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont <= N):
	valor = 1 + valor + (cont/(cont*2+1))
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
1.6666666666666665
3.0666666666666664
4.495238095238095
5.93968253968254
7.394227994227994
8.855766455766455
10.322433122433122
11.79302135772724
13.266705568253554
14.74289604444403
16.22115691400925
17.70115691400925
19.18263839549073
20.665397016180385
22.14926798392232
23.634116468770806
25.11983075448509
26.606317240971578
28.093496728151063
29.581301606199844
31.0696736992231
32.55856258811199
34.04792429023965
35.537720208607
37.02791628703837
38.51848232477422
40.00939141568331
41.50061948585875
42.992144909587566
44.48394818827609
45.97601168033958
47.46831937264727
48.960856686080106
50.45361030926851
51.946568055747385
53.43971874067889
54.933052074012224
56.42655856751872
57.920229453594665
59.414056614088494
60.90803251770295
62.40215016476177
63.89640303832499
65.3907850607969
66.88529055530239
68.37991421121637
69.87465105332164
71.36949641414638
72.86444590909588
74.35949541404638
75.85464104511433
77.34987914035243
78.84520624315617
80.34061908719286
81.83611458268835
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:19:08) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1/3
soma = 0
cont = 1

while(cont <= N):
	valor = 1 + valor + (cont/(cont*2+1))
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
1.6666666666666665
3.0666666666666664
4.495238095238095
5.93968253968254
7.394227994227994
8.855766455766455
10.322433122433122
11.79302135772724
13.266705568253554
14.74289604444403
16.22115691400925
17.70115691400925
19.18263839549073
20.665397016180385
22.14926798392232
23.634116468770806
25.11983075448509
26.606317240971578
28.093496728151063
29.581301606199844
31.0696736992231
32.55856258811199
34.04792429023965
35.537720208607
37.02791628703837
38.51848232477422
40.00939141568331
41.50061948585875
42.992144909587566
44.48394818827609
45.97601168033958
47.46831937264727
48.960856686080106
50.45361030926851
51.946568055747385
53.43971874067889
54.933052074012224
56.42655856751872
57.920229453594665
59.414056614088494
60.90803251770295
62.40215016476177
63.89640303832499
65.3907850607969
66.88529055530239
68.37991421121637
69.87465105332164
71.36949641414638
72.86444590909588
74.35949541404638
75.85464104511433
77.34987914035243
78.84520624315617
80.34061908719286
81.83611458268835
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:21:07) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1
soma = 1
cont = 1

while(cont <= N):
	valor = valor + (cont/(cont*2+1))
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
1.3333333333333333
1.7333333333333334
2.1619047619047618
2.606349206349206
3.0608946608946606
3.5224331224331222
3.989099789099789
4.459688024393906
4.933372234920222
5.4095627111106985
5.887823580675916
6.367823580675916
6.849305062157398
7.3320636828470525
7.8159346505889875
8.300783135437472
8.786497421151758
9.272983907638244
9.76016339481773
10.247968272866512
10.736340365889767
11.225229254778656
11.714590956906315
12.204386875273663
12.694582953705035
13.185148991440885
13.676058082349975
14.167286152525413
14.658811576254227
15.15061485494275
15.642678347006242
16.134986039313937
16.627523352746774
17.12027697593518
17.613234722414052
18.10638540734556
18.59971874067889
19.093225234185386
19.586896120261336
20.080723280755162
20.57469918436962
21.068816831428443
21.563069704991662
22.057451727463572
22.55195722196907
23.04658087788305
23.54131771998831
24.036163080813054
24.53111257576255
25.026162080713043
25.521307711781002
26.0165458070191
26.511872909822838
27.0072857538595
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:21:19) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1
soma = 1
cont = 1

while(cont <= N):
	valor = valor * (cont/(cont*2+1))
	soma = soma + valor
	cont += 1
	print(valor)
-- OUTPUT:
0.3333333333333333
0.13333333333333333
0.05714285714285714
0.025396825396825393
0.011544011544011542
0.005328005328005327
0.002486402486402486
0.0011700717583070523
0.0005542445170928143
0.00026392596052038776
0.00012622545937931588
6.058822050207162e-05
2.9172106167664112e-05
1.408308573611371e-05
6.814396323925989e-06
3.303949732812601e-06
1.6047755845089775e-06
7.807016357070702e-07
3.8034182252395724e-07
1.8553259635314986e-07
9.060894240502667e-08
4.4297705175790815e-08
2.167760040517423e-08
1.0617600198452684e-08
5.204705979633668e-09
2.5532519900089696e-09
1.2534146132771305e-09
6.157124416098184e-10
3.026383187573684e-10
1.488385174216566e-10
7.323800063605325e-11
3.6055631082364675e-11
1.7758743667433347e-11
8.75068528540194e-12
4.313718098437576e-12
2.127313034845928e-12
1.0494744305239912e-12
5.17922446232619e-13
2.556832329502803e-13
1.2626332491371865e-13
6.237104001762005e-14
3.081863153811814e-14
1.5232197197000922e-14
7.530524456944275e-15
3.7238857204669495e-15
1.84192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:22:07) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1
soma = 1
cont = 1

while(cont <= N):
	valor = valor * (cont/(cont*2+1))
	soma = soma + valor
	cont += 1

print(round(2*valor,10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:22:44) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1
soma = 1
cont = 1

while(cont <= N):
	soma = soma * (cont/(cont*2+1))
	valor = soma + valor
	cont += 1

print(round(2*valor,10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 19:22:47) 
-- CODE:
N = int(input("insira o numero de termos: "))

valor = 1
soma = 1
cont = 1

while(cont <= N):
	soma = soma * (cont/(cont*2+1))
	valor = soma + valor
	cont += 1

print(round(2*valor,10))
-- EXECUTION TIME:
0.218632
-- TEST CASE 1:
---- input:
1560
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 2:
---- input:
1000
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
